Fix the sidebar and main content on mobile phones

--- a/src/assets/style/_sidebar.scss
+++ b/src/assets/style/_sidebar.scss
@@ -16,6 +16,7 @@
     transition: all 300ms ease-in-out;
     transform: translate(-100%, 0);
     display: block !important;
+    position: absolute;
 
   }
 
